[FIX] project_pages: added padding to fix white space

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    /* border: 1px solid red; */
-
+    border: 1px
 }
 
 html {
@@ -241,6 +240,10 @@ img {
 .project {
     background-color: var(--primary-color);
     color: #fff;
+    padding-top: 1px; 
+    padding-bottom: 1px;
+}
+    
 }
 
 /*Resume*/
